--- a/docs/2.md
+++ b/docs/2.md
@@ -37,8 +37,16 @@ LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)
 array([ 0.5,  0.5])
 
 ```
+### 补充  最小二乘法最优解说明
+参考：[最小二乘法的矩阵形式最优解](https://blog.csdn.net/JavaMoo/article/details/78313057)
+在计算时，若X存在相关性，$(X^{T}X)^{-1}$不存在的情况，利用奇异值分解求$(X^{T}X)^{+}$
 
-然而，对于普通最小二乘的系数估计问题，其依赖于模型各项的相互独立性。当各项是相关的，且设计矩阵 ![X](img/43c1fea57579e54f80c0535bc582626f.jpg) 的各列近似线性相关，那么，设计矩阵会趋向于奇异矩阵，这种特性导致最小二乘估计对于随机误差非常敏感，可能产生很大的方差。例如，在没有实验设计的情况下收集到的数据，这种多重共线性（multicollinearity）的情况可能真的会出现。
+
+> **示例**:
+>*   [线性回归示例](https://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html)
+
+然而，对于普通最小二乘的系数估计问题，其依赖于模型各项的相互独立性。当各项是相关的，且设计矩阵 ![X](img/43c1fea57579e54f80c0535bc582626f.jpg) 的各列近似线性相关，那么，设计矩阵会趋向于奇异矩阵，这种特性导致最小二乘估计对于随机误差非常敏感，可能产生很大的方差。例如，在没有实验设计的情况下收集到的数据，这种[多重共线性（multicollinearity](https://baike.baidu.com/item/%E5%A4%9A%E9%87%8D%E5%85%B1%E7%BA%BF%E6%80%A7/10201978?fr=aladdin)的情况可能真的会出现。
+
 
 > **示例**:
 >*   [线性回归示例](https://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html)
